[package]
name = "simple-tcp"
version = "0.1.0"
edition = "2021"
description = "A simple TCP/IP stack implementation in Rust"
license = "MIT"

[lib]
name = "simple_tcp"
path = "src/lib.rs"

[dependencies]
tun-tap = "0.1.4"
byteorder = "1.4"

[[example]]
name = "simple_tcp_stack"
path = "examples/simple_tcp_stack.rs"