[package]
name = "toy-network"
version = "0.1.0"
edition = "2021"
description = "A simple TCP/IP stack implementation in Rust"
license = "MIT"

[lib]
name = "toy_network"
path = "src/lib.rs"

[dependencies]
tun-tap = "0.1.4"
byteorder = "1.4"

[[example]]
name = "listener"
path = "examples/listener.rs"

[[example]]
name = "virtual_network_demo"
path = "examples/virtual_network_demo.rs"
